// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't render account type if none 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Meta
      title="Giving History"
    />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false}
    />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}
  >
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary"
    >
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored"
      >
        <div
          className="soft-double-ends@anchored"
        >
          <div
            className="text-center"
          >
            <p
              className="push-half-bottom"
            >
              <em>
                Invalid date
              </em>
            </p>
            <h3
              className="text-dark-secondary"
            >
              test
            </h3>
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="display-inline-block text-center soft-bottom"
            />
            <h6
              className="push-bottom text-dark-tertiary"
            >
              jim
               
              bob
            </h6>
            <h4
              className="text-dark-secondary"
            >
              1
               
            </h4>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable"
            >
              Thank you for your contribution to NewSpring Church. Because you are obedient in giving, we'll be able to connect more people to Jesus and each other.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored"
    >
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom"
      >
        Recent Articles About Giving
      </h4>
      <div
        className="grid"
      >
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="0"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="1"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`doesn't render entries if there are none 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Meta
      title="Giving History"
    />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false}
    />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}
  >
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary"
    >
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored"
      >
        <div
          className="soft-double-ends@anchored"
        >
          <div
            className="text-center"
          >
            <p
              className="push-half-bottom"
            >
              <em>
                Invalid date
              </em>
            </p>
            <h3
              className="text-dark-secondary"
            >
              test
            </h3>
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="display-inline-block text-center soft-bottom"
            />
            <h6
              className="push-bottom text-dark-tertiary"
            >
              jim
               
              bob
            </h6>
            <h4
              className="text-dark-secondary"
            >
              1
               
              <AccountType
                height="20px"
                type="Bank"
                width="30px"
              />
            </h4>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable"
            >
              Thank you for your contribution to NewSpring Church. Because you are obedient in giving, we'll be able to connect more people to Jesus and each other.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored"
    >
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom"
      >
        Recent Articles About Giving
      </h4>
      <div
        className="grid"
      />
    </div>
  </Left>
</div>
`;

exports[`doesn't render payment account at all if none 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Meta
      title="Giving History"
    />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false}
    />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}
  >
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary"
    >
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored"
      >
        <div
          className="soft-double-ends@anchored"
        >
          <div
            className="text-center"
          >
            <p
              className="push-half-bottom"
            >
              <em>
                Invalid date
              </em>
            </p>
            <h3
              className="text-dark-secondary"
            >
              test
            </h3>
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="display-inline-block text-center soft-bottom"
            />
            <h6
              className="push-bottom text-dark-tertiary"
            >
              jim
               
              bob
            </h6>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable"
            >
              Thank you for your contribution to NewSpring Church. Because you are obedient in giving, we'll be able to connect more people to Jesus and each other.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored"
    >
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom"
      >
        Recent Articles About Giving
      </h4>
      <div
        className="grid"
      >
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="0"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="1"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`renders loading if loadingEntries 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Meta
      title="Giving History"
    />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false}
    />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}
  >
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary"
    >
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored"
      >
        <div
          className="soft-double-ends@anchored"
        >
          <div
            className="text-center"
          >
            <p
              className="push-half-bottom"
            >
              <em>
                Invalid date
              </em>
            </p>
            <h3
              className="text-dark-secondary"
            >
              test
            </h3>
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="display-inline-block text-center soft-bottom"
            />
            <h6
              className="push-bottom text-dark-tertiary"
            >
              jim
               
              bob
            </h6>
            <h4
              className="text-dark-secondary"
            >
              1
               
              <AccountType
                height="20px"
                type="Bank"
                width="30px"
              />
            </h4>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable"
            >
              Thank you for your contribution to NewSpring Church. Because you are obedient in giving, we'll be able to connect more people to Jesus and each other.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored"
    >
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom"
      >
        Recent Articles About Giving
      </h4>
      <div
        className="one-whole soft text-center"
      >
        <Spinner />
      </div>
    </div>
  </Left>
</div>
`;

exports[`renders loading if no transaction 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Meta
      title="Giving History"
    />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false}
    />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}
  >
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary"
    >
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored"
      >
        <div
          className="soft-double-ends@anchored"
        >
          <div
            className="text-center soft"
          >
            <Spinner
              styles={
                Object {
                  "height": "40px",
                  "width": "40px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored"
    >
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom"
      >
        Recent Articles About Giving
      </h4>
      <div
        className="grid"
      >
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="0"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="1"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`renders with props 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Meta
      title="Giving History"
    />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false}
    />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}
  >
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary"
    >
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored"
      >
        <div
          className="soft-double-ends@anchored"
        >
          <div
            className="text-center"
          >
            <p
              className="push-half-bottom"
            >
              <em>
                Invalid date
              </em>
            </p>
            <h3
              className="text-dark-secondary"
            >
              test
            </h3>
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="display-inline-block text-center soft-bottom"
            />
            <h6
              className="push-bottom text-dark-tertiary"
            >
              jim
               
              bob
            </h6>
            <h4
              className="text-dark-secondary"
            >
              1
               
              <AccountType
                height="20px"
                type="Bank"
                width="30px"
              />
            </h4>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable"
            >
              Thank you for your contribution to NewSpring Church. Because you are obedient in giving, we'll be able to connect more people to Jesus and each other.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored"
    >
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom"
      >
        Recent Articles About Giving
      </h4>
      <div
        className="grid"
      >
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="0"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="1"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`works with credit card 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Meta
      title="Giving History"
    />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false}
    />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}
  >
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary"
    >
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored"
      >
        <div
          className="soft-double-ends@anchored"
        >
          <div
            className="text-center"
          >
            <p
              className="push-half-bottom"
            >
              <em>
                Invalid date
              </em>
            </p>
            <h3
              className="text-dark-secondary"
            >
              test
            </h3>
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="display-inline-block text-center soft-bottom"
            />
            <h6
              className="push-bottom text-dark-tertiary"
            >
              jim
               
              bob
            </h6>
            <h4
              className="text-dark-secondary"
            >
              1
               
              <AccountType
                height="20px"
                type="Visa"
                width="30px"
              />
            </h4>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable"
            >
              Thank you for your contribution to NewSpring Church. Because you are obedient in giving, we'll be able to connect more people to Jesus and each other.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored"
    >
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom"
      >
        Recent Articles About Giving
      </h4>
      <div
        className="grid"
      >
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="0"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="1"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`works with nickname 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Meta
      title="Giving History"
    />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false}
    />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}
  >
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary"
    >
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored"
      >
        <div
          className="soft-double-ends@anchored"
        >
          <div
            className="text-center"
          >
            <p
              className="push-half-bottom"
            >
              <em>
                Invalid date
              </em>
            </p>
            <h3
              className="text-dark-secondary"
            >
              test
            </h3>
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="display-inline-block text-center soft-bottom"
            />
            <h6
              className="push-bottom text-dark-tertiary"
            >
              jimothy
               
              bob
            </h6>
            <h4
              className="text-dark-secondary"
            >
              1
               
              <AccountType
                height="20px"
                type="Bank"
                width="30px"
              />
            </h4>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable"
            >
              Thank you for your contribution to NewSpring Church. Because you are obedient in giving, we'll be able to connect more people to Jesus and each other.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored"
    >
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom"
      >
        Recent Articles About Giving
      </h4>
      <div
        className="grid"
      >
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="0"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom"
          key="1"
        >
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }
          >
            <h4
              className="push-half-top@portable push-top@anchored"
            >
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test",
                  }
                }
              />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;
